# hs-infra

./: .env.example  .gitignore  .sops.yaml  .sops.yaml.example  AGENTS.md  ANSIBLE_DEPLOYMENT.md  API_HOST_MIGRATION_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  Taskfile.yml  Vagrantfile  ansible.cfg  compose.core.yml  compose.tasks.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
.github/workflows/: CI.yml  ansible-check.yml  deploy.yml  provision.yml  site.yml
agentgateway/: bootstrap.sh  config.yaml.tmpl
ansible/: requirements.yml
ansible/playbooks/: bootstrap.yml  deploy.yml  site.yml
caddy/: Caddyfile  Dockerfile  tasks.caddy  tls_cloudflare.caddy  tls_local.caddy
docker/: compose.yml  core.yml  tasks.yml  test.yml  watchtower.yml
docs/: README.md
docs/architecture/: keycloak.md  mcp.md  overview.md  routes.md
docs/deployment/: ansible.md  production.md
docs/development/: local.md
docs/planning/: api-host-migration-plan.md  implementation-plan.md
keycloak/: bootstrap.sh  healthcheck.sh
oauth2-proxy/: oauth2-proxy.cfg
postgres/: bootstrap.sh
scripts/: run-flow-tests.sh
tasks-web/: Dockerfile  index.html
tests/flows/: README.md  api.spec.ts  app-login.spec.ts  conftest.py  current.env.example  env.ts  flow_env.py  flow_helpers.py  global-setup.ts  global-teardown.ts  helpers.ts  keycloak_setup.py  mcp.spec.ts  migrated.env.example  test_api_flow.py  test_app_login_flow.py  test_keycloak_exposure.py  test_mcp_flow.py  test_watchtower_exposure.py  (+3 more)
(+37 files in other folders)
