[project]
name = "home-stack"
version = "1.0.0"
description = "Homelab auth gateway stack tests and tooling"
requires-python = ">=3.14,<3.15"
dependencies = [
    "ansible-core>=2.21.0",
]

[dependency-groups]
dev = [
  "ansible-lint>=26.4.0",
  "httpx==0.28.1",
  "mdformat>=1.0.0",
  "playwright==1.60.0",
  "pytest==9.0.3",
  "pytest-playwright==0.8.0",
  "pytest-rerunfailures==16.3",
  "pytest-timeout==2.4.0",
  "ruff>=0.15.16",
  "shellcheck-py>=0.11.0.1",
  "testcontainers==4.14.2",
  "yamlfix>=1.19.1",
]

[tool.pytest.ini_options]
addopts = "--browser chromium --device 'Desktop Chrome' --timeout=30 --tracing retain-on-failure"
testpaths = ["tests/flows"]
python_files = ["test_*.py"]
timeout_func_only = true

[tool.yamlfix]
exclude = [".ansible-lint"]
preserve_quotes = true
